<resources>
    <string-array name="array_voice_file_option">
        <item>删除</item>
        <item>播放</item>
    </string-array>
    <string-array name="array_long_menu_plan">
        <item>删除</item>
    </string-array>
    <string-array name="array_field_type">
        <item>教育/培训/院校</item>
        <item>计算机软件</item>
        <item>互联网/电子商务</item>
        <item>娱乐/休闲/体育</item>
        <item>影视/媒体/艺术/文化传播</item>
        <item>金融/投资/证券</item>
        <item>酒店/旅游</item>
        <item>银行/保险</item>
        <item>公关/市场推广/会展</item>
        <item>房地产开发</item>
        <item>贸易/进出口</item>
        <item>广告</item>
        <item>餐饮业</item>
        <item>快速消费品（食品、饮料、化妆品）</item>
        <item>电子技术/半导体/集成电路</item>
        <item>服装/纺织/皮革</item>
        <item>专业服务（咨询、人力资源、财会）</item>
        <item>制药/生物工程</item>
        <item>建筑/建材/工程</item>
        <item>文字媒体/出版</item>
        <item>机械/设备/重工</item>
        <item>印刷/包装/造纸</item>
        <item>采掘业/冶炼</item>
        <item>法律</item>
        <item>石油/化工/矿产/地质</item>
        <item>环保</item>
        <item>交通/运输/物流</item>
        <item>批发/零售</item>
        <item>学术/科研</item>
        <item>汽车及零配件</item>
        <item>生活服务/家政</item>
        <item>政府/公共事业</item>
        <item>中介服务</item>
        <item>仪器仪表/工业自动化</item>
        <item>电力/水利</item>
        <item>计算机硬件/计算机服务（系统、数据服务、维修）</item>
        <item>通信/电信运营、增值服务、网络游戏</item>
        <item>会计/审计</item>
        <item>家具/家电/工艺品/玩具/珠宝</item>
        <item>办公用品及设备</item>
        <item>医疗/护理/卫生/医疗设备/器械</item>
        <item>家具/室内设计/装潢</item>
        <item>物业管理/商业中心</item>
        <item>检测/认证</item>
        <item>美容/保健</item>
        <item>航空/航天</item>
        <item>原材料和加工</item>
        <item>非盈利机构</item>
        <item>多元化业务集团公司</item>
        <item>外包服务</item>
        <item>奢侈品/收藏品</item>
        <item>新能源</item>
        <item>其他行业</item>
    </string-array>
    <string-array name="array_teacher_type">
        <item>战略设计</item>
        <item>商业模式</item>
        <item>税务筹划</item>
        <item>法律顾问</item>
        <item>上市辅导</item>
        <item>薪酬设计</item>
        <item>绩效设计</item>
        <item>业绩提升</item>
        <item>效益改善</item>
        <item>创业辅导</item>
        <item>形象礼仪</item>
    </string-array>
    <string-array name="array_level_type">
        <item>初识倬家</item>
        <item>突破一段</item>
        <item>突破二段</item>
        <item>突破三段</item>
        <item>融达一段</item>
        <item>融达二段</item>
        <item>坤行一段</item>
        <item>坤行二段</item>
        <item>超越</item>
        <item>归元</item>
    </string-array>
    <string-array name="array_zenghui_type">
        <item>倬学智慧</item>
        <item>领导执行</item>
        <item>企业文化</item>
        <item>市场营销</item>
        <item>薪酬设计</item>
        <item>绩效考评</item>
        <item>组织机制</item>
        <item>人才招聘</item>
        <item>财务管理</item>
        <item>心灵成长</item>
        <item>风云人物</item>
        <item>客户服务</item>
        <item>品牌成长</item>
        <item>育才体系</item>
        <item>战略规划</item>
    </string-array>
    <string-array name="array_res_type">
        <item>所有资源</item>
        <item>融资项目</item>
        <item>人才引聘</item>
        <item>业务合作</item>
        <item>投资理财</item>
        <item>商业活动</item>
        <item>产品服务</item>
    </string-array>
    <string-array name="array_sign_type">
        <item>白羊座</item>
        <item>金牛座</item>
        <item>双子座</item>
        <item>巨蟹座</item>
        <item>狮子座</item>
        <item>处女座</item>
        <item>天秤座</item>
        <item>天蝎座</item>
        <item>射手座</item>
        <item>摩羯座</item>
        <item>水瓶座</item>
        <item>双鱼座</item>
    </string-array>
    <string-array name="array_hobby">
        <item>阅读</item>
        <item>品茶</item>
        <item>香道</item>
        <item>高尔夫</item>
        <item>足球</item>
        <item>篮球</item>
        <item>太极拳</item>
        <item>散打</item>
        <item>健身</item>
        <item>跑步</item>
        <item>旅游</item>
        <item>骑马</item>
        <item>射击</item>
        <item>音乐</item>
        <item>电影</item>
        <item>登山</item>
        <item>钓鱼</item>
        <item>炒股</item>
        <item>美食</item>
        <item>葡萄酒</item>
        <item>瑜伽</item>
        <item>游泳</item>
        <item>摄影</item>
        <item>古玩收藏</item>
        <item>字画收藏</item>
        <item>玉石收藏</item>
        <item>水晶</item>
        <item>蜜蜡</item>
        <item>书法</item>
        <item>绘画</item>
        <item>越野</item>
        <item>航海</item>
        <item>飞行</item>
        <item>京剧</item>
    </string-array>
    <string-array name="QUAN_ROLE_NAME">
        <item>申请入圈</item>
        <item>普通成员</item>
        <item>管理员</item>
        <item>圈主</item>
    </string-array>
    <string name="type_board0">分享</string>
    <string name="type_board1">活动</string>
    <string name="type_board0_type">0</string>
    <string name="type_board1_type">1</string>
    <string name="type_gong">提供</string>
    <string name="type_xu">需求</string>
    <string name="type_gong_type">offer</string>
    <string name="type_xu_type">demand</string>
    <string name="type_board_type">broadcast</string>
    <string name="type_daily_type">daily</string>
    <string name="tab_item1">首页</string>
    <string name="tab_item2">动态</string>
    <string name="tab_item3">倬信</string>
    <string name="tab_item4">精进</string>
    <string name="tab_item5">我的</string>
    <string name="group_type_1">倬家圈子</string>
    <string name="group_type_2">我的同城家人</string>
    <string name="group_type_3">我的同行家人</string>
    <string name="group_type_4">我的同修家人</string>
    <string name="group_type_5">资源供需</string>
    <string name="group_type_6">最热圈子</string>
    <string name="group_type_7">最新圈子</string>
    <string name="group_type_8">俱乐部</string>
    <string name="group_type_9">兴趣爱好</string>
    <string name="group_type_10">其他</string>
    <string name="errcode_unknown">未知错误</string>
    <string name="error0">网络连接失败</string>
    <string name="error1">获取图片失败</string>
    <string name="error_intent">订单生成出错，请重新提交</string>
    <string name="submit_error">发布失败，请重新发布</string>
    <string name="error2">请确认已经插入SD卡</string>
    <string name="error3">建立通讯录索引失败</string>
    <string name="error4">文件不存在</string>
    <string name="error5">发送失败</string>
    <string name="error6">正在录音中，请停止录音后删除</string>
    <string name="error7">正在播放中，请停止播放后删除</string>
    <string name="error8">删除失败</string>
    <string name="error9">开始录音失败</string>
    <string name="error10">定位失败</string>
    <string name="error11">已达选择上限</string>
    <string name="error12">正在加载数据，请稍候</string>
    <string name="data_error">数据加载出错</string>
    <string name="error13">旧密码输入错误</string>
    <string name="error14">请输入新密码</string>
    <string name="error15">请在此输入新密码</string>
    <string name="error16">两次输入密码不一致</string>
    <string name="error17">发送失败，请检测网络</string>
    <string name="error18">对不起，您现在搜索的内容还不存在</string>
    <string name="error19">请输入您的电话</string>
    <string name="error20">请输入您的地址</string>
    <string name="error21">请输入您朋友的电话</string>
    <string name="error22">请输入您朋友的地址</string>
    <string name="error23">您的倬家币不足</string>
    <string name="error24">已超过数量限制</string>
    <string name="info0">选择图片</string>
    <string name="info1">显示更多</string>
    <string name="info2">收起内容</string>
    <string name="info3">条新消息</string>
    <string name="info4">消息通知</string>
    <string name="info5">发来</string>
    <string name="info6">条消息</string>
    <string name="info7">发送中</string>
    <string name="info8">没有网络连接，是否需要打开</string>
    <string name="info9">取消发送该文件？</string>
    <string name="info10">发送成功</string>
    <string name="info11">网络连接中，请稍候再试</string>
    <string name="info12">删除成功</string>
    <string name="info13">您确定退出圈子吗？</string>
    <string name="info14">帐号不能为空</string>
    <string name="info15">密码不能为空</string>
    <string name="info16">请选择广播类型</string>
    <string name="info17">好的标题是成功的开始</string>
    <string name="info18">详细资源描述</string>
    <string name="info19">添加关键词标签 以方便检索   用；隔开</string>
    <string name="info20">获取位置. . .</string>
    <string name="info21">添加照片</string>
    <string name="info22">请输入标题</string>
    <string name="info23">请选择广播类型</string>
    <string name="info24">请输入描述</string>
    <string name="info25">请输入圈子名称</string>
    <string name="info26">请输入圈子简介</string>
    <string name="info27">确定不保存就离开吗？</string>
    <string name="info28">我的故事 我的传记</string>
    <string name="info29">请选择供需类型</string>
    <string name="info30">最多可上传10张形象照，以便家人更加了解你</string>
    <string name="info31">请输入行业</string>
    <string name="info32">以下信息只作为匹配推荐使用,不会展示给其他用户</string>
    <string name="info33">是否准备或正在创业：</string>
    <string name="info34">是否准备或正在工作：</string>
    <string name="info35">请输入企业名称</string>
    <string name="info36">请输入职务名称</string>
    <string name="info37">真实完善个人资料，让你更容易获得机会</string>
    <string name="info38">请输入手机号码</string>
    <string name="info39">只对我的好友公开</string>
    <string name="info40">请输入邮箱号</string>
    <string name="info41">只对我的好友公开</string>
    <string name="info42">对我的联系人公开生日</string>
    <string name="info43">请输入现居住城市</string>
    <string name="info44">请输入经常来往的城市</string>
    <string name="info45">请输入我的家乡</string>
    <string name="info46">请选择您的爱好,以发现与自己有相同爱好的家人</string>
    <string name="info47">请输入您的客户</string>
    <string name="info48">请描述您的梦想，让我们一起来实现它</string>
    <string name="info49">请分享你的价值观与信念，以找到同频的家人</string>
    <string name="info50">请输入产品名称</string>
    <string name="info51">请对产品进行介绍，让家人更加清晰地了解产品的功能</string>
    <string name="info52">您的产品能为客户带来什么好处，您的产品都适合哪些客户</string>
    <string name="info53">请输入我的网站</string>
    <string name="info54">我经常去的城市</string>
    <string name="info55">例如：北京 上海 广州 深圳</string>
    <string name="info56">我的星级</string>
    <string name="info57">请输入旧密码</string>
    <string name="info58">至少六位</string>
    <string name="info59">请重复一次密码</string>
    <string name="info60">修改成功</string>
    <string name="info61">当前正在录音，是否停止？</string>
    <string name="info62">发布成功</string>
    <string name="info63">提示</string>
    <string name="info64">正在发送中</string>
    <string name="infofile">文件上传中...</string>
    <string name="info65">请输入评论内容</string>
    <string name="info66">创建成功</string>
    <string name="info67">更新成功</string>
    <string name="info68">再点一次离开</string>
    <string name="info69">确定不提交就离开吗？</string>
    <string name="info70">请输入</string>
    <string name="info71">亲爱的家人，这是我们的家，让我们一起完善它，请将您的建议反馈给我们。</string>
    <string name="info72">请描述您的产品或服务，让家人更加清晰您所能提供的价值</string>
    <string name="info73">亲爱的家人，为了保证您的信息安全，请立即更换密码</string>
    <string name="label_back">返回</string>
    <string name="label_login">登录</string>
    <string name="label_save">保存</string>
    <string name="label_uid">请输入您的手机号码</string>
    <string name="label_password">请输入您的密码</string>
    <string name="label_share">分享</string>
    <string name="mp_place">所在城市:</string>
    <string name="mp_othertowns">来往城市:</string>
    <string name="mp_hometown">我的家乡:</string>
    <string name="mp_myyx">我的邮箱:</string>
    <string name="my_oldpwd">原始密码</string>
    <string name="my_newpwd">新密码</string>
    <string name="my_renewpwd">重新输入新密码</string>
    <string name="title_activity_card_add_user_email">我的邮箱</string>
    <string name="title_activity_card_add_user_city">我的位置</string>
    <string name="froget_password">忘记密码?</string>
    <string name="company_name">北京倬脉网络科技有限公司版权所有</string>
    <string name="company_copyright">Copyright© 2010\n中和黄埔版权所有\nAll Rights Reserved</string>
    <string name="change_zhuo_password">重新设置倬脉登录密码</string>
    <string name="des_zhuo_password">密码有6&#8211;16位字母或数字组成</string>
    <string name="label_quan_brief">圈子简介</string>
    <string name="label_invite_friends">邀请好友</string>
    <string name="infocity">请分享自己经常所在的城市，以发现同城家人。</string>
    <string name="info399">对倬脉所有家人公开</string>
    <string name="info377">请留下真实邮箱，以便于家人找到你</string>
    <string name="quan_create_success">祝贺您成功创建了\n开始发布第一份公告吧</string>
    <string name="quan_create_success_bro">亲爱的倬家人们，我的圈子成功创建了，欢迎大家一起来经营我们的家</string>
    <string name="public_bro">发布公告</string>
</resources>