<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_red"
    tools:context=".LoginActivity" >

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/uid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/bg_text_on"
                android:ems="10"
                android:hint="@string/label_uid"
                android:inputType="text"
                android:maxLines="1"
                android:paddingLeft="10dp"
                android:singleLine="true" >

                <requestFocus />
            </EditText>

            <EditText
                android:id="@+id/password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/bg_text_off"
                android:ems="10"
                android:hint="@string/label_password"
                android:imeActionId="@+id/login"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:maxLines="1"
                android:paddingLeft="10dp"
                android:singleLine="true" />

            <Button
                android:id="@+id/sign_in_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="72dp"
                android:background="@drawable/button_login"
                android:shadowColor="#ffffff"
                android:shadowDx="1"
                android:shadowDy="1"
                android:shadowRadius="1"
                android:text="@string/label_login"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/froget_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/froget_password" />
        </LinearLayout>
    </ScrollView>

    <TextView
        android:gravity="center_horizontal"
        android:id="@+id/company"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15dp"
        android:text="@string/company_name" />

    <TextView
        android:gravity="center_horizontal"
        android:layout_marginBottom="5dp"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/company_copyright" 
        android:textSize="@dimen/copyright_text"
        />

</RelativeLayout>