<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f9f9f9"
    android:orientation="vertical"
    tools:context=".CardAddUserEmailActivity" >

    <RelativeLayout
        android:id="@+id/userNameShowParent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_title" >

        <TextView
            android:id="@+id/userNameShow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/title_activity_card_add_user_email"
            android:textColor="#ffffff"
            android:textSize="20sp" />

        <Button
            android:id="@+id/buttonBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="8dp"
            android:background="@drawable/button_top_bg_back"
            android:paddingLeft="7dp"
            android:text="@string/label_back"
            android:textColor="#ffffff"
            android:textSize="14sp" />

        <Button
            android:id="@+id/buttonSubmit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="8dp"
            android:background="@drawable/button_save"
            android:text="@string/label_save"
            android:textColor="#ffffff"
            android:textSize="14sp" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="0dp"
        android:layout_marginTop="0dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="10dp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textViewIntro"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:text="@string/info377"
                android:textColor="#999999"
                android:textSize="14sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/shape_corners3"
                android:orientation="horizontal"
                android:padding="10dp" >

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="5dp"
                        android:text="@string/mp_myyx"
                        android:textSize="16sp" />
                </RelativeLayout>

                <EditText
                    android:id="@+id/editTextEmail"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@null"
                    android:ems="10"
                    android:hint="@string/info40"
                    android:inputType="textEmailAddress"
                    android:singleLine="true" >

                    <requestFocus />
                </EditText>
            </LinearLayout>

            <CheckBox
                android:id="@+id/checkBoxIsOpen"
                style="@style/CPCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:checked="true"
                android:paddingLeft="35dp"
                android:text="@string/info41" />

            <CheckBox
                android:id="@+id/checkBoxIsOpenToAll"
                style="@style/CPCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:checked="false"
                android:paddingLeft="35dp"
                android:text="@string/info399" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>