<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#bb000000"
    android:orientation="vertical"
    tools:context=".QuanCreateSuccessActivity" >

    <include layout="@layout/title_activity" />

    <TextView
        style="@style/basic_text_white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center_horizontal"
        android:text="@string/quan_create_success" />

    <EditText
        android:id="@+id/aqcs_text"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_margin="20dp"
        android:background="@color/white"
        android:gravity="top"
        android:hint="@string/quan_create_success_bro"
        android:padding="10dp"
        android:textColor="@color/graywhite"
        android:textColorHint="@color/graywhite"
        android:textSize="@dimen/basic_text" />

    <Button
        android:id="@+id/aqcs_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="20dp"
        android:text="@string/public_bro"
        android:textColor="@color/black"
        android:padding="10dp"
        android:background="@drawable/zjbutton3" />

</LinearLayout>